--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $z-index-navbar: 1000;
 $z-index-background: -1;
 
 // Colors
-$primary-color: #FFD60A;
+$primary-color: #DEDFF3;
 $text-color: #ffffff;
 $background-color: #000000;
 
