--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -11,6 +11,8 @@
 
 // Components
 @import './components/button';
+@import './components/_ContentBlock.scss';
+@import './components/_Timeline';
 
 // Layout
 @import './layout/NavBar';
@@ -19,5 +21,4 @@
 @import './layout/SocialIcons';
 
 // Pages
-@import './pages/About.scss';
 @import './pages/App.scss';
