--- a/src/assets/styles/components/_ContentBlock.scss
+++ b/src/assets/styles/components/_ContentBlock.scss
@@ -53,7 +53,7 @@
     font-size: 118px;
     font-weight: bold;
     margin-bottom: 1rem;
-    font-family: balto;
+    font-family: "balto", arial;
     text-transform: uppercase;
     line-height: 0.8;
   }
