--- a/src/assets/styles/components/_Timeline.scss
+++ b/src/assets/styles/components/_Timeline.scss
@@ -3,7 +3,6 @@
 }
 
 .timeline {
-  font-family: Arial, sans-serif;
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
@@ -11,24 +10,33 @@
 
   .timeline-header {
     text-align: left;
-    margin-top: 50px;
     margin-bottom: 40px;
     text-align: center;
+    margin: 100px 100px 100px 100px;
 
     h2 {
-      color: #FFA500;
-      font-size: 24px;
-      margin-bottom: 10px;
+      color: $background-color;
+      font-size: 14px;
+      margin-bottom: 3.5rem;
+      text-transform: uppercase;
+      font-family: "roboto", sans-serif;
+      font-weight: 400;
+      text-transform: uppercase;
     }
 
     h1 {
-      font-size: 36px;
+      font-size: 118px;
       margin-bottom: 20px;
+      color: $background-color;
+      text-transform: uppercase;
+      font-family: "balto";
+      line-height: 0.9;
     }
 
     p {
       font-size: 18px;
-      color: #666;
+      color: $background-color;
+      font-family: "proxima-nova", sans-serif;
     }
   }
 
@@ -73,11 +81,11 @@
 
       &.active {
         opacity: 1;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        box-shadow: 0 4px 8px rgba(0,0,0,1);
       }
 
       h3 {
-        color: #FFA500;
+        color: $background-color-contentblock;
         font-size: 18px;
         margin-bottom: 10px;
       }
@@ -85,6 +93,7 @@
       h4 {
         font-size: 24px;
         margin-bottom: 15px;
+        color: $background-color-contentblock;
       }
 
       p {
