--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -6,12 +6,17 @@ $z-index-background: -1;
 $primary-color: hsl(237, 47%, 91%);
 $text-color: #ffffff;
 $background-color: #000000;
-$background-color-contentblock : #4169E1;
+$background-color-contentblock : #452CE9;
+$background-stream : #0F0E0F;
+
+// Button colors
+
 
 // Social media colors
 $twitter-color: #1DA1F2;
 $twitch-color: #9146FF;
 $youtube-color: #FF0000;
+$color-icon :#6d737a;
 
 // Font sizes
 $font-size-large: 180px;
