--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,9 +16,9 @@
 
 // Layout
 @import './layout/NavBar';
-@import './components/HeroTitle';
 @import './layout/Header.scss';
 @import './layout/SocialIcons';
 
 // Pages
 @import './pages/App.scss';
+@import './pages/TwitchStream.scss';
