--- a/src/assets/styles/components/_ContentBlock.scss
+++ b/src/assets/styles/components/_ContentBlock.scss
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background-color: #4169E1;
-  color: rgb(0, 0, 0);
+  background-color: $background-color-contentblock;
+  color: $background-color;
 
   .content {
     display: flex;
@@ -53,7 +53,7 @@
     font-size: 118px;
     font-weight: bold;
     margin-bottom: 1rem;
-    font-family: "balto", arial;
+    font-family: $title-article;
     text-transform: uppercase;
     line-height: 0.8;
   }
@@ -62,7 +62,7 @@
     font-size: 14px;
     margin-bottom: 3.5rem;
     text-transform: uppercase;
-    font-family: "roboto", sans-serif;
+    font-family: $subtitle;
     font-weight: 400;
     font-style: normal;
   }
@@ -70,7 +70,7 @@
   .description {
     font-size: 20px;
     line-height: 1.2;
-    font-family: "proxima-nova", sans-serif;
+    font-family: $subtitle;
     font-weight: 500;
     font-style: normal;
     margin-top: 50px;
