--- a/src/assets/styles/layout/Header.scss
+++ b/src/assets/styles/layout/Header.scss
@@ -1,19 +1,16 @@
 /* HERO TITLE SCSS */
 
-:root {
-  --bg: #dcdde1;     
-  --color-icon: #535c68;  
-  --twitter-color: #1DA1F2;
-  --twitch-color: #9146FF;
-  --youtube-color: #FF0000;
-}
-
 .hero {
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0 40px;
+  background-image: url('/src/assets/images/wallpaper_home.png');
+  background-size: cover;
+  background-position: center; 
+  background-repeat: no-repeat;
+  align-items: center; 
 }
 
 .watch-trailer-button {
@@ -31,7 +28,40 @@
   font-weight: bold;
   color: white;
   line-height: 0.9;
-  margin-left: 1215px;
+  margin-left: 1180px;
   position: relative;
-  margin-top: 130px;
+  margin-top: 80px;
+  font-family: $title-article;
+  text-transform: uppercase;
+
+  h3 {
+    font-family: $description;
+    font-size: 26px;
+    color: white;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    letter-spacing: 26px;
+  }
+}
+
+.hero-title {
+  font-size: 160px;
+  font-weight: bold;
+  color: white;
+  line-height: 0.9;
+  margin-bottom: 10px;
+  font-family: $title-article;
+  text-transform: uppercase;
+  margin-top: 100px;
+}
+
+.hero-subtitle {
+  font-family: $description;
+  font-size: 14px;
+  color: white;
+  margin-top: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  line-height: 0.5;
 }
