--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $text-color: #ffffff;
 $background-color: #000000;
 $background-color-contentblock : #452CE9;
 $background-stream : #0F0E0F;
+$background-color-contact : #0B0D1E;
 
 // Button colors
 
