--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import './components/button';
 @import './components/_ContentBlock';
 @import './components/_Timeline';
+@import './components/ContactForm';
 
 // Layout
 @import './layout/NavBar';
