--- a/src/assets/styles/components/_ContactForm.scss
+++ b/src/assets/styles/components/_ContactForm.scss
@@ -1,93 +1,141 @@
 .contact-form-overlay {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    z-index: 1000;
-    animation: slideIn 0.3s ease-out;
-  
-    .contact-form-container {
-      background-color: white;
-      width: 33.33%;
-      margin-top: -150px;
-      margin-right: 80px;
-      height: 600px;
-      padding: 2rem;
-      border-radius: 15px 15px 15px 15px;
-      box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
-  
-      h2 {
-        margin-bottom: 1rem;
-      }
-  
-      .close-button {
-        position: absolute;
-        top: 50px;
-        right: 675px;
-        margin-top: 50px;
-        background: none;
-        border: none;
-        font-size: 2rem;
-        cursor: pointer;
-      }
-  
-      .form-group {
-        margin-bottom: 1rem;
-  
-        label {
-          display: block;
-          margin-bottom: 0.5rem;
-        }
-  
-        input, textarea {
-          width: 100%;
-          padding: 0.5rem;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-        }
-  
-        textarea {
-          height: 100px;
-        }
-  
-        .error {
-          color: red;
-          font-size: 0.8rem;
-        }
-      }
-  
-      .submit-button {
-        background-color: #007bff;
-        color: white;
-        padding: 0.5rem 1rem;
-        border: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(61, 61, 61, 0.6);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  z-index: 1001;
+  animation: slideIn 0.3s ease-out;
+
+  &.closing {
+    animation: slideOut 0.3s ease-in forwards;
+  }
+
+  .contact-form-container {
+    background-color: $background-color-contact;
+    width: 33.33%;
+    margin-top: 0px;
+    margin-right: 100px;
+    height: 600px;
+    padding: 2rem;
+    border-radius: 15px 15px 15px 15px;
+    box-shadow: -5px 0 20px rgba(0, 0, 0, 2);
+    overflow-y: auto;
+
+    h3 {
+      margin-top: 20px;
+      font-size: 14px;
+      text-align: center;
+      font-family: $subtitle;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      margin-bottom: 1rem;
+      margin-top: 10px;
+      font-size: 25px;
+      text-align: center;
+      font-family: $title-article;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    .close-button {
+      position: absolute;
+      top: 120px;
+      right: 125px;
+      margin-top: 50px;
+      background: none;
+      color: $text-color;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+    }
+
+    .form-group {
+      margin-bottom: 30px;
+
+      input, textarea {
+        width: 100%;
+        padding: 0.5rem;
+        border: 1px solid #ccc;
         border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-  
-        &:hover {
-          background-color: #0056b3;
+
+        &::placeholder {
+          color: #adadad;
+          font-family: $subtitle;
         }
       }
-  
-      .success-message {
-        color: green;
-        font-weight: bold;
+
+      textarea {
+        height: 120px;
+      }
+
+      .error {
+        color: red;
+        font-size: 0.8rem;
+      }
+    }
+
+    .submit-button {
+      font-family: $subtitle;
+      text-transform: uppercase;
+      background-color: #F1FF7E;
+      color: black;
+      padding: 0.5rem 3rem;
+      border: none;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      margin-left: 35.5%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      svg {
+        margin-right: 0.5rem;
+      }
+
+      &:hover {
+        background-color: $text-color;
+      }
+    }
+
+    .success-message {
+      color: $text-color;
+      font-weight: bold;
+      text-align: center;
+      font-family: $subtitle;
+      font-size: 20px;
+      margin-top: 150px;
+      margin-left: 50px;
+      margin-right: 50px;
+
+      p {
+        margin-bottom: 1rem;
       }
     }
   }
-  
-  @keyframes slideIn {
-    from {
-      transform: translateX(100%);
-    }
-    to {
-      transform: translateX(0);
-    }
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(100%);
   }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
