--- a/src/assets/styles/components/_ContactForm.scss
+++ b/src/assets/styles/components/_ContactForm.scss
@@ -78,6 +78,7 @@
       .error {
         color: red;
         font-size: 0.8rem;
+        text-align: center;
       }
     }
 
@@ -122,6 +123,11 @@
   }
 }
 
+.error-message{
+  text-align: center;
+  margin-left: 50px;
+  margin-right: 50px;
+}
 @keyframes slideIn {
   from {
     transform: translateX(100%);
