--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,9 +14,11 @@
 @import './components/_ContentBlock';
 @import './components/_Timeline';
 @import './components/ContactForm';
+@import './components/_YouTubePopup';
+
 
 // Layout
-@import './layout/NavBar';
+@import './components/NavBar';
 @import './layout/Header';
 @import './layout/SocialIcons';
 
