--- a/src/assets/styles/components/_Timeline.scss
+++ b/src/assets/styles/components/_Timeline.scss
@@ -36,7 +36,7 @@
     p {
       font-size: 18px;
       color: $background-color;
-      font-family: "proxima-nova", sans-serif;
+      font-family: $description ;
     }
   }
 
