--- a/src/assets/styles/components/_ContentBlock.scss
+++ b/src/assets/styles/components/_ContentBlock.scss
@@ -68,11 +68,10 @@
   }
 
   .description {
-    font-size: 20px;
+    font-size: 18px;
+    color: $background-color;
+    font-family: $description;
     line-height: 1.2;
-    font-family: $subtitle;
-    font-weight: 500;
-    font-style: normal;
     margin-top: 50px;
     margin-left: 50px;
     margin-right: 50px;
