--- a/src/assets/styles/components/_NavBar.scss
+++ b/src/assets/styles/components/_NavBar.scss
@@ -51,26 +51,59 @@
 
   .nav-item-wrapper {
     position: relative;
+
+    &:hover .dropdown-menu {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
+    }
   }
 
   .dropdown-menu {
     position: absolute;
     top: 100%;
-    left: 0;
+    left: 1px;
+    font-family: $subtitle;
+    font-weight: 100;
+    font-size: 12px;
+    text-transform: uppercase;
     background-color: $background-color;
-    border-radius: 4px;
+    border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     opacity: 0;
     visibility: hidden;
     transform: translateY(-10px);
     transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s;
     z-index: 1000;
+    min-width: 150px;
+    margin-top: 5px; 
 
-    a {
+    &::before {
+      content: '';
+      position: absolute;
+      top: -15px; // Correspond à padding-top + margin-top
+      left: 0;
+      right: 0;
+      height: 15px;
+      background: transparent;
+    }
+
+    .dropdown-item {
       display: block;
       padding: 8px 16px;
       color: $text-color;
       text-decoration: none;
+      transition: background-color 0.2s ease, color 0.2s ease;
+
+      &:first-child {
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
+      }
 
       &:hover {
         background-color: $primary-color;
@@ -79,10 +112,13 @@
     }
   }
 
-  .nav-item-wrapper:hover .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
+  &__volume-control {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #DFDFF2;
+    margin-left: 16px;
   }
 }
 
@@ -101,7 +137,7 @@
   top: 10px;
   left: 15px;
   width: 98.5%;
-  border-radius : 15px;
+  border-radius: 15px;
   background-color: black;
   padding: 10px 32px;
   transform: translateY(-100%);
@@ -112,16 +148,6 @@
   to {
     transform: translateY(0);
   }
-}
-
-
-/* NAVBAR SCSS */
-
-.Navbar {
-  position: absolute;
-  width: 100%;
-  z-index: 10;
-  padding: 24px 32px;
 }
 
 .nav {
@@ -137,21 +163,13 @@
   display: flex;
   gap: 12px;
   position: relative;
-  left: 70%;
+  left: 100%;
 }
 
 .hovered {
   background-color: #DFDFF2;
   color: black;
 }
-
-.navbar__volume-control {
-  background: none;
-  border: none;
-  font-size: 24px;
-  cursor: pointer;
-  color: #DFDFF2;
-  margin-left: 16px;
 
 // Styles spécifiques pour les pages About et Contact
 .about-page, .contact-page {
@@ -176,5 +194,4 @@
       }
     }
   }
-}
 }
