--- a/src/assets/styles/components/_YouTubePopup.scss
+++ b/src/assets/styles/components/_YouTubePopup.scss
@@ -44,7 +44,7 @@
     .close-button, .expand-button {
       position: absolute;
       top: 10px;
-      background: rgba(0, 0, 0, 0.5);
+      background: black;
       color: white;
       border: none;
       border-radius: 50%;
