--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -29,3 +29,11 @@ $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 992px;
 $breakpoint-xlarge: 1200px;
+
+// Définition des couleurs GameReview
+$secondary-color: #16213e; // Bleu un peu plus clair
+$accent-color: #e94560; // Rouge vif
+$success-color: #4caf50; // Vert
+$error-color: #f44336; // Rouge
+$star-color: #aaa; // Gris pour les étoiles non remplies
+$star-filled-color: #ffd700; // Doré pour les étoiles remplies
